--- a/lig.html
+++ b/lig.html
@@ -13,7 +13,7 @@
         
     </header>
     <section>
-        <img src="assert/light off.png" id="bulb" width="200">
+        <img src="https://raw.github.com/Sugan-ns/light/main/light%20off.png" id="bulb" width="200">
         <h1>Click the button ON to turn on light</h1>
 
         <div class="btn_container"><button id="on" class="bulb_btn" onclick="bulb_on()">on</button>
