--- a/lig.html
+++ b/lig.html
@@ -21,10 +21,10 @@
     </section>
     <script>
     function bulb_on(){
-        document.getElementById('bulb').src='assert/light on.png';
+        document.getElementById('bulb').src='https://raw.github.com/Sugan-ns/light/main/light%20on.png';
     }
     function bulb_off(){
-        document.getElementById('bulb').src='assert/light off.png';
+        document.getElementById('bulb').src='https://raw.github.com/Sugan-ns/light/main/light%20off.png';
     }
 </script>
   </body>
